# cbuf-lib

./: .gitignore  CMakeLists.txt  MakeFile  README.md  cppcheck-suppressions.txt  misra.json
.github/workflows/: ci.yml
include/: cbuf.h
src/: cbuf.c
tests/: CMakeLists.txt  test_cbuf.c
